Fix CCS Layout Bug 2

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -409,14 +409,14 @@ div.pagination{
 }
 .ccstable li{
   display: inline-block;
-  padding:0 10px 10px 0;
+  padding: 0 10px 10px 0;
+  width: 30%;
 }
 .ccstable a{
-  /*background: #f1e9e9;*/
-  border: 3px solid #fff;
-  padding: 10px 15px;
+  padding: 8px;
   border: 1px solid;
   display: block;
+  font-size: 13px;
 }
 .ccstable .active a{
   background: #f1e9e9;
